deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microblogging
  labels:
    name: microblogging
